Ensure SciChartSurface stretches to full screen. Note only works with v1.11346 or higher

--- a/Sandbox/demo-electron/src/renderer/main.css
+++ b/Sandbox/demo-electron/src/renderer/main.css
@@ -2,3 +2,8 @@
 body {
     margin: 0;
 }
+
+/* Ensures the main <div> is 100% of viewport height */
+.mainDiv {
+    height: 100vh;
+}
